network-policy/example-2/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: a
  labels:
    name: a
---
apiVersion: v1
kind: Namespace
metadata:
  name: b
  labels:
    name: b
