network-policy/example-2/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-a
  namespace: a
  labels:
    app: pod-a
spec:
  containers:
  - name: nginx
    image: nginx
---

apiVersion: v1
kind: Pod
metadata:
  name: pod-b
  namespace: b
  labels:
    app: pod-b
spec:
  containers:
  - name: nginx
    image: nginx
